--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a-assets>
         <a-asset-item
           id="bowser"
-          src="http://localhost/Objetc-3D-master/Tlax-room.glb"
+          src="https://objeto3d2.herokuapp.com/Tlax-room.glb"
         >
         </a-asset-item>
       </a-assets>
